# haki

./: .gitattributes  .gitignore  README.md  build.gradle  clean.sh  commit.bat  commit.sh  settings.gradle
.claude/: settings.local.json
docker/databases/oracle/: compose.yaml  exec  start.sh  stop  stop.sh  tail
gradle/wrapper/: gradle-wrapper.properties
scripts/: .bash_aliases  brew.sh  buildNeovim.sh  buildQemu.sh  buildSlirp.sh  ensureVtxVtd.bat  forMingw.sh  installDocker.sh  installPackages.sh  packages.txt  restartWSL.bat  sqldev.sh  systemUpdate.bat  systemUpdate.sh  systemUpdate2.bat
scripts/dgreadiness_v3.6/: DG_Readiness_Tool_v3.6.ps1  DefaultWindows_Audit.xml  DefaultWindows_Enforced.xml
scripts/workflow/: .bash_aliases2  .fzf.zsh2  .rainbarf.conf  .tmux.conf  .tmux.wsl.conf  .vimrc  .zprofile  .zprofile2  .zshrc  .zshrc2  EDITOR_COMPARISON.md  INDEX.md  SCRIPT_FIXES.md  UPDATE_GUIDE.md  VIM_QUICK_REFERENCE.md  _vimrc  aliases.zsh  aliases.zsh2  checkForUpdates.sh  installClangd  installClangd.bat  installEclipseJdtls.bat  installPNPM  installPerl  langServerUp  node-packages.txt  setup  setupWindowsNeovim.bat  setupWindowsVim.bat  testLSP.sh
scripts/workflow/.claude/: settings.json
scripts/workflow/.codex/: config.toml
scripts/workflow/.config/: starship.toml
scripts/workflow/.gemini/: settings.json
src/main/ccpp/: .autocp  .clangd  .cph  CMakeLists.txt  build.bat  clean.bat  clean.sh  cmakeBuild.sh  commit.bat  commit.sh  compile_flags.txt  ex0  ex0.cpp  ex1.cpp  ex2.cpp  ex4.cpp  installXcodeCmdTool.sh  reinstallXcodeCmdTool.sh  revertUpdateLib.sh  run.bat  run.sh  sandbox.cpp  sandbox0.cpp  sandbox1.cpp  sandbox10.cpp  sandbox11.cpp  sandbox12.cpp  sandbox2.cpp  sandbox3.cpp  sandbox4.cpp  sandbox5.cpp  sandbox6.cpp  sandbox7.cpp  sandbox8.cpp  sandbox9.cpp  test.bat  test.sh  updateLib.bat  updateLib.sh
src/main/ccpp/.vscode.commit/: launch.json  settings.json  tasks.json
src/main/ccpp/.vscode.linux.commit/: launch.json  tasks.json
src/main/ccpp/.vscode.macos.commit/: c_cpp_properties.json  launch.json  notes.txt  tasks.json
src/main/ccpp/.vscode.windows.commit/: launch.json  settings.json  tasks.json
src/main/ccpp/00/: ex0.cpp  ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp
src/main/ccpp/00-basic/: ex3.cpp
src/main/ccpp/01/: ex0.cpp  ex1.cpp  ex1_again_0.cpp  ex2.cpp  ex3.cpp  ex4.cpp
src/main/ccpp/01-stack/: ex0.cpp
src/main/ccpp/02/: ex0.cpp  ex1.cpp  ex1_again_0.cpp  ex2.cpp  notes.txt
src/main/ccpp/03/: ex0.cpp  ex1.cpp  ex1_again_0.cpp  notes.txt
src/main/ccpp/04/: ex0.cpp  ex1.cpp  ex1_draft.cpp  ex1_draft2.cpp  notes.txt
src/main/ccpp/04_2/: ex1.cpp
src/main/ccpp/C/: armhf.sh  bridge.conf  build.sh  buildKernel.sh  buildRaspKernel.sh  cmdline.raspios.org.txt  cmdline.raspios.updated.txt  cmdline.ubuntu.updated.txt  compile.sh  compileTestSource.sh  custom.conf  gdm-password  init.sh  installPackages.sh  prepRaspArmhf.sh  prepare.sh  qemu-ifdown  qemu-ifup  qemuArmhf.sh  qemuNetwork.sh  qemuNetworkDown.sh  qemuNetworkUp.sh  qemuPrepRaspArmhf.sh  qemuRaspArmhf.sh  sources.list  test  test.c  ubuntu.sources  vexpress-v2p-ca15-tc1.dts
src/main/ccpp/C/old.dir/: buildKernel.sh  buildRaspKernel.sh  cmdline.raspios.updated.txt  network.sh  prepRaspArmhf.sh
src/main/ccpp/C/tools.dir/: initrd.img  vmlinuz
src/main/ccpp/bits/: stdc++.h
src/main/ccpp/ds/: red_black_tree.cpp
src/main/ccpp/main/: input.txt  input.xlsx  input_1.txt  input_2.txt  input_3.txt  input_4.txt  input_5.txt  input_6.txt
src/main/ccpp/main/01/: m1_s1_2.cpp
src/main/ccpp/main/02/: m1_s2_1.cpp  m1_s2_3.cpp  m1_s2_4.cpp  m1_s2_5.cpp
src/main/ccpp/main/03/: m1_s3_2.cpp  m1_s3_3.cpp  m1_s3_3_2nd_attempt.cpp  test.cpp
src/main/ccpp/main/04/: m1_s4_1.cpp  m1_s4_2.cpp  m1_s4_2_2nd_attempt.cpp  m1_s4_2_3rd_attempt.cpp  m1_s4_2_4th_attempt.cpp  m1_s4_2_4th_attempt_fastest.cpp  m1_s4_2_5th_attempt.cpp  m1_s4_2_6th_attempt.cpp  m1_s4_2_7th_attempt.cpp
src/main/ccpp/main/05/: m1_s5_1.cpp  m1_s5_1_into_func.cpp  m1_s5_2.cpp  m1_s5_2_2nd_attempt.cpp  m1_s5_2_3rd_attempt.cpp  m1_s5_2_4th_attempt.cpp  m1_s5_2_5th_attempt.cpp  m1_s5_2_6th_attempt.cpp  m1_s5_2_7th_attempt_fastest_leanest.cpp  m1_s5_3.cpp  m1_s5_3_2nd_attempt.cpp  m1_s5_3_3rd_attempt.cpp  m1_s5_3_4th_attempt.cpp  m1_s5_4.cpp  m1_s5_4_10th_attempt.cpp  m1_s5_4_11th_attempt_benchmarking.cpp  m1_s5_4_12th_attempt_benchmarking.cpp  m1_s5_4_13th_attempt_benchmarking.cpp  m1_s5_4_2nd_attempt.cpp  m1_s5_4_3rd_attempt.cpp  m1_s5_4_4th_attempt.cpp  m1_s5_4_5th_attempt.cpp  m1_s5_4_6th_attempt.cpp  m1_s5_4_7th_attempt.cpp  m1_s5_4_8th_attempt.cpp
src/main/ccpp/main/05/.cph/: .m1_s5_4.cpp_0c3b8659cf80910d0bb67c58cd64ed3c.prob
src/main/ccpp/main/06/: e1.cpp  m1_s6_1.cpp  m1_s6_1_v3.cpp  m1_s6_2.cpp  m1_s6_2_v2.cpp  m1_s6_3.cpp  notes.txt
src/main/ccpp/main/06/.cph/: .m1_s6_1.cpp_3da761bbfcab8f389df897ceb64e1d49.prob  .m1_s6_2.cpp_f089eef4c1c86c11f6abaec743cef0c6.prob  .m1_s6_2.cpp_f47994a58c08d43e310ea43792e2a155.prob  .m1_s6_2_v2.cpp_3e8fa426b70ded70cef7decce47e6d0e.prob
src/main/ccpp/main/test/: deque_test.cpp  it_test.cpp  ops_test.cpp  pointer_test.cpp  pq_test.cpp  recur.cpp  string_test.cpp  tree_test.cpp  vector_test.cpp
src/main/ccpp/test/: test_lsp  test_lsp.cpp
src/main/ccpp/unsafe-chrome/: unsafe-browsing.bat
src/main/ccpp/unsafe-chrome/linux/: build-linux.sh  unsafe-chrome-linux-arm64.cpp  unsafe-chrome-linux-x64.cpp  unsafe-chrome.desktop
src/main/ccpp/unsafe-chrome/windows/: build-windows.bat  build-windows.sh  test.rc  unsafe-chrome-windows-arm64.cpp  unsafe-chrome-windows-arm64.rc  unsafe-chrome-windows-x64.cpp  unsafe-chrome-windows-x64.rc
src/main/ccpp/vim/: m1_01  m1_01.cpp  m1_03  m1_03.cpp  m1_04  m1_04.cpp  m1_05  test  test.cpp
src/main/ccpp/vim/01/: m1_02  m1_s1_5.cpp
src/main/ccpp/vim/02/: m1_s2_1.cpp  m1_s2_2.cpp
src/main/ccpp/vim/03/: m1_s3_1.cpp  m1_s3_2.cpp
src/main/java/: Ex4.java  JUnitExample.java  Sandbox.java  TestFromVim.java  TestLSP.java  TestLSP2.java  TestLSP3.java
src/main/web/: index.html  package-lock.json  package.json  positions-ex1.html  (+1 more)
(+122 files in other folders)
